Switch service handlers to reload and ensure started state

--- a/ansible/roles/bitwarden/handlers/main.yml
+++ b/ansible/roles/bitwarden/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Restart Bitwarden service
+- name: Reload Bitwarden service
   ansible.builtin.systemd_service:
       name: bitwarden-pod.service
-      state: restarted
+      state: reloaded
       daemon_reload: true
