--- a/ansible/roles/bitwarden/tasks/main.yml
+++ b/ansible/roles/bitwarden/tasks/main.yml
@@ -17,7 +17,7 @@
       - ts-bitwarden.container
       - ts-bitwarden-state.volume
       - bitwarden.json
-  notify: Restart Bitwarden service
+  notify: Reload Bitwarden service
 
 - name: Ensure bitwarden service secrets are available
   containers.podman.podman_secret:
@@ -36,4 +36,9 @@
       - name: bw-admins
         data: "{{ bitwarden.bw_admins }}"
   no_log: true
-  notify: Restart Bitwarden service
+  notify: Reload Bitwarden service
+
+- name: Ensure bitwarden service is started
+  ansible.builtin.systemd_service:
+      name: bitwarden-pod.service
+      state: started
