--- a/ansible/roles/dumbbudget/tasks/main.yml
+++ b/ansible/roles/dumbbudget/tasks/main.yml
@@ -17,7 +17,7 @@
       - ts-dumbbudget.container
       - ts-dumbbudget-state.volume
       - dumbbudget.json
-  notify: Restart Dumbbudget service
+  notify: Reload Dumbbudget service
 
 - name: Ensure dumbbudget service secrets are available
   containers.podman.podman_secret:
@@ -25,4 +25,9 @@
       name: "ts-authkey"
       data: "{{ tailscale.ts_authkey }}"
   no_log: true
-  notify: Restart Dumbbudget service
+  notify: Reload Dumbbudget service
+
+- name: Ensure dumbbudget service is started
+  ansible.builtin.systemd_service:
+      name: dumbbudget-pod.service
+      state: started
