--- a/ansible/roles/gitea/handlers/main.yml
+++ b/ansible/roles/gitea/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Restart Gitea service
+- name: Reload Gitea service
   ansible.builtin.systemd_service:
       name: gitea-pod.service
-      state: restarted
+      state: reloaded
       daemon_reload: true
