--- a/ansible/roles/pocket-id/tasks/main.yml
+++ b/ansible/roles/pocket-id/tasks/main.yml
@@ -17,7 +17,7 @@
       - pocket-id-data.volume
       - webfinger.container
       - webfinger
-  notify: Restart Pocket-id service
+  notify: Reload Pocket-id service
 
 - name: Ensure pocket-id service secrets are available
   containers.podman.podman_secret:
@@ -25,4 +25,9 @@
       name: "cf-tunnel-token"
       data: "{{ cloudflare.cf_tunnel_token }}"
   no_log: true
-  notify: Restart Pocket-id service
+  notify: Reload Pocket-id service
+
+- name: Ensure pocket-id service is started
+  ansible.builtin.systemd_service:
+      name: pocket-id-pod.service
+      state: started
