--- a/ansible/roles/glance/tasks/main.yml
+++ b/ansible/roles/glance/tasks/main.yml
@@ -16,7 +16,7 @@
       - ts-glance.container
       - ts-glance-state.volume
       - glance.json
-  notify: Restart Glance service
+  notify: Reload Glance service
 
 - name: Ensure glance assets and config files are in place
   ansible.builtin.copy:
@@ -26,7 +26,7 @@
   loop:
       - assets
       - config
-  notify: Restart Glance service
+  notify: Reload Glance service
 
 - name: Ensure glance service secrets are available
   containers.podman.podman_secret:
@@ -34,4 +34,9 @@
       name: "ts-authkey"
       data: "{{ tailscale.ts_authkey }}"
   no_log: true
-  notify: Restart Glance service
+  notify: Reload Glance service
+
+- name: Ensure glance service is started
+  ansible.builtin.systemd_service:
+      name: glance-pod.service
+      state: started
