--- a/ansible/roles/pocket-id/handlers/main.yml
+++ b/ansible/roles/pocket-id/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Restart Pocket-id service
+- name: Reload Pocket-id service
   ansible.builtin.systemd_service:
       name: pocket-id-pod.service
-      state: restarted
+      state: reloaded
       daemon_reload: true
