--- a/ansible/roles/tsidp/handlers/main.yml
+++ b/ansible/roles/tsidp/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Restart Tsidp service
+- name: Reload Tsidp service
   ansible.builtin.systemd_service:
       name: tsidp-pod.service
-      state: restarted
+      state: reloaded
       daemon_reload: true
