Switch service handlers from reload to restart
Add dnf-automatic and PCP setup to general role

Comment out unused Docker socket in glance container config

Enable pmproxy in firewalld and systemd

--- a/ansible/roles/bitwarden/tasks/main.yml
+++ b/ansible/roles/bitwarden/tasks/main.yml
@@ -17,7 +17,7 @@
       - ts-bitwarden.container
       - ts-bitwarden-state.volume
       - bitwarden.json
-  notify: Reload Bitwarden service
+  notify: Restart Bitwarden service
 
 - name: Ensure bitwarden service secrets are available
   containers.podman.podman_secret:
@@ -36,7 +36,7 @@
       - name: bw-admins
         data: "{{ bitwarden.bw_admins }}"
   no_log: true
-  notify: Reload Bitwarden service
+  notify: Restart Bitwarden service
 
 - name: Ensure bitwarden service is started
   ansible.builtin.systemd_service:
