--- a/ansible/roles/bitwarden/handlers/main.yml
+++ b/ansible/roles/bitwarden/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Reload Bitwarden service
+- name: Restart Bitwarden service
   ansible.builtin.systemd_service:
       name: bitwarden-pod.service
-      state: reloaded
+      state: restarted
       daemon_reload: true
