--- a/ansible/roles/dumbassets/handlers/main.yml
+++ b/ansible/roles/dumbassets/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Reload Dumbassets service
+- name: Restart Dumbassets service
   ansible.builtin.systemd_service:
       name: dumbassets-pod.service
-      state: reloaded
+      state: restarted
       daemon_reload: true
