--- a/ansible/roles/dumbdo/handlers/main.yml
+++ b/ansible/roles/dumbdo/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Reload Dumbdo service
+- name: Restart Dumbdo service
   ansible.builtin.systemd_service:
       name: dumbdo-pod.service
-      state: reloaded
+      state: restarted
       daemon_reload: true
