--- a/ansible/roles/gitea/handlers/main.yml
+++ b/ansible/roles/gitea/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Reload Gitea service
+- name: Restart Gitea service
   ansible.builtin.systemd_service:
       name: gitea-pod.service
-      state: reloaded
+      state: restarted
       daemon_reload: true
