--- a/ansible/roles/jellyfin/tasks/main.yml
+++ b/ansible/roles/jellyfin/tasks/main.yml
@@ -18,7 +18,7 @@
       - ts-jellyfin.container
       - ts-jellyfin-state.volume
       - jellyfin.json
-  notify: Reload Jellyfin service
+  notify: Restart Jellyfin service
 
 - name: Ensure jellyfin service secrets are available
   containers.podman.podman_secret:
@@ -26,7 +26,7 @@
       name: "ts-authkey"
       data: "{{ tailscale.ts_authkey }}"
   no_log: true
-  notify: Reload Jellyfin service
+  notify: Restart Jellyfin service
 
 - name: Ensure jellyfin service is started
   ansible.builtin.systemd_service:
