--- a/ansible/roles/pocket-id/handlers/main.yml
+++ b/ansible/roles/pocket-id/handlers/main.yml
@@ -1,6 +1,6 @@
 ---
-- name: Reload Pocket-id service
+- name: Restart Pocket-id service
   ansible.builtin.systemd_service:
       name: pocket-id-pod.service
-      state: reloaded
+      state: restarted
       daemon_reload: true
