--- a/ansible/roles/searxng/tasks/main.yml
+++ b/ansible/roles/searxng/tasks/main.yml
@@ -18,7 +18,7 @@
       - ts-searxng.container
       - ts-searxng-state.volume
       - searxng.json
-  notify: Reload Searxng service
+  notify: Restart Searxng service
 
 - name: Ensure searxng service secrets are available
   containers.podman.podman_secret:
@@ -26,7 +26,7 @@
       name: "ts-authkey"
       data: "{{ tailscale.ts_authkey }}"
   no_log: true
-  notify: Reload Searxng service
+  notify: Restart Searxng service
 
 - name: Ensure searxng service is started
   ansible.builtin.systemd_service:
