--- a/ansible/roles/common/handlers/main.yml
+++ b/ansible/roles/common/handlers/main.yml
@@ -4,3 +4,18 @@
       name: mnt-nas.mount
       state: reloaded
       daemon_reload: true
+
+- name: Enable backup timer
+  ansible.builtin.systemd_service:
+      name: backup-container-volumes.timer
+      enabled: true
+      daemon_reload: true
+
+- name: Restart podman services
+  ansible.builtin.systemd_service:
+      name: "{{ item }}"
+      state: restarted
+      daemon_reload: true
+  loop:
+      - podman.socket
+      - podman-restart.service
