Update Ansible config and split site.yml into two plays
- Add performance and connection options to ansible.cfg - Separate
general setup and services deployment in site.yml - Set gather_facts to
false and strategy to free for both plays

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -2,3 +2,11 @@
 vault_password_file=.vault_pass
 inventory=hosts.ini
 remote_user=ansible
+interpreter_python=auto_silent
+host_key_checking=False
+gathering=smart
+pipelining=True
+forks=10
+
+[ssh_connection]
+pipelining=True
